<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="command">发送指令</string>
    <string name="trace_info">终端信息</string>
    <string name="warning">被控告警</string>
    <string name="warning_local">本地告警</string>
    <string name="app_name">手机定位追踪系统</string>
    <string name="app_setting">系统设置</string>
    <string name="login">登录</string>
    <string name="login_account">手机号码</string>
    <string name="phone_tips">手机号码</string>
    <string name="empty_phone_bumber">手机号码不能为空</string>
    <string name="warning_region">请输入监控区域半径(单位千米)</string>
    <string name="cur_location">我的位置</string>
    <string name="command_list">日志管理</string>
    
    <string name="btn_trace">被控终端选择</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_send">发送</string>
    <string name="btn_locate">定位</string>
    <string name="btn_command">发送指令</string>
    <string name="remove_warning">删除该警告区域</string>
    
    <string name="title_command_send">选择发送指令</string>
    <string name="title_warning_region">告警区域设置</string>
    <string name="command_send_success">指令发送成功</string>
    
    <string name="wait">正在下载信息……</string>
    <string name="logout">退出</string>
    
    <string name="setting">设置</string>
    <string name="refresh_delay">被控终端信息刷新频率</string>
    <string name="line_draw">被控终端轨迹连线</string>
    <string name="setting_active">启用</string>
    <string name="setting_inactive">关闭</string>
    <string name="warning_tips">告警提示</string>
    <string name="sound_tips">声音提示</string>
    <string name="vibrate_tips">震动提示</string>
    <string name="map_type">地图类型</string>
    <string name="search_location">搜索</string>
    <string name="latitude">经度</string>
    <string name="longtitude">纬度</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="about_text">手机定位追踪系统\n版本号：1.0</string>
    
    <string name="login_tips">请输入SIM卡对应11位手机号码</string>
    
    <string name="categary_tips_type">提示方式</string>
    
    <string name="trace_info_id" formatted="false">终端ID : %s</string>
    <string name="trace_info_phonenumber" formatted="false">手机号 : %s</string>
    <string name="trace_info_point" formatted="false">终端经纬度 : %s</string>
    <string name="trace_info_distance" formatted="false">与主控终端距离 : %s 米</string>
    
    <string name="title_send_command" formatted="false">选择要发送的指令：(终端 %s)</string>
    <string name="title_trace_point" formatted="false">终端:%s 手机号:%s</string>
    <string name="title_trace_info_default">终端信息</string>
    <string name="titile_trace_info_list">被控终端信息</string>
    <string name="title_trace_warning">告警区域信息</string>
    <string name="title_search_dialog">经纬度搜索</string>
    <string name="title_trace_dialog">被控终端列表</string>
	<string name="title_warning_activity">告警区域管理</string>    
    
    <string name="text_out_warning">移出告警区域告警</string>
    <string name="text_in_warning">进入告警区域告警</string>
    
    <string name="title_warning_point" formatted="false">当前经纬度(%s %s)</string>
    
    <string name="warning_list">告警区域管理</string>
    <string name="location_error">没有打开地理定位，请到设置->位置中打开GPS定位</string>
    
    <string name="tips_phone_number">请输入11位正确的手机号码</string>
    <string name="tips_exit">再按返回键退出应用程序</string>
    
    <string name="open_gps_msg">启用“定位服务”来允许确定您的位置</string>
    <string name="dialog_title_refresh_rate">设置被控点信息刷新频率</string>
    
    <string name="controller_info">本地告警区域管理</string>
    <string name="be_controlled_info">被控告警区域管理</string>
 
 	<string name="command_log_info">发送指令日志</string>   
 	<string name="warning_log_info">告警日志</string>   
    
    <string name="title_login_passwd">登录密码</string>
    
    <string name="passwd_txt">密码</string>
    <string name="passwd_confirm_txt">确认密码</string>
    
    <string name="tips_passwd_error">登录密码错误</string>
    <string name="tips_empty_passwd">密码不能为空</string>
    <string name="tips_passwd_confirm_error">两次密码输入不同</string>
    <string name="login_error">登录失败，请检查网络是否连接</string>
    
    <string name="extend_category">服务器地址</string>
    <string name="server_ip">服务器IP设置</string>
    
    <string name="login_progress">正在登录……</string>
    <string name="waring_region_empty">告警半径不能为空</string>
    <string name="waring_region_error">告警半径错误</string>
    <string name="warning_region_trace_error">请选择被控终端</string>
    <string name="warning_in_out_select_error">请选择区域监控方式(进入/移出)</string>
    
    <string name="be_controlled_tips">越界告警由被控终端触发，越界后，被控端会主动向主控端发出告警信息</string>
    <string name="controll_tips">越界告警由主控终端触发，根据主控端接收到的被控端位置信息进行判断，如果越界则告警</string>

	<string name="command_time" formatted="false">发送时间 : %s</string>   
	<string name="command_target" formatted="false">被控终端 : ID,%s : %s</string>   
	<string name="command_command" formatted="false">指令 : %s</string>
	
	<string name="time" formatted="false">告警时间:%s</string>
	<string name="id" formatted="false">ID:%s</string>
	<string name="phone" formatted="false">手机:%s</string>
</resources>

