<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView 
        android:id="@+id/region"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/warning_region"
        android:gravity="left"
        android:textColor="@drawable/gray3"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            
    <EditText
        android:id="@+id/region_edit"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
	<CheckedTextView
	    android:id="@+id/out_warnging"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="?android:attr/listPreferredItemHeight"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:gravity="center_vertical"
	    android:paddingLeft="12dip"
	    android:paddingRight="7dip"
	    android:checkMark="@android:drawable/btn_radio"
	    android:ellipsize="marquee"
	   	android:text="@string/text_out_warning"/>

	<CheckedTextView 
	    android:id="@+id/in_warnging"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="?android:attr/listPreferredItemHeight"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:gravity="center_vertical"
	    android:paddingLeft="12dip"
	    android:paddingRight="7dip"
	    android:checkMark="@android:drawable/btn_radio"
	    android:ellipsize="marquee"
	    android:text="@string/text_in_warning"/>
</LinearLayout>
